--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,17 @@
 }
 /*Variables*/
 
+/* Effets paralax */
+/* .parallax{
+    background-image: url(/assets/image/grenobleimage.jpg);
+    min-height: 200vh;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+} */
+/* Effets paralax */
+
 html{
     scroll-behavior: smooth;
 }
@@ -103,6 +114,7 @@ nav ul li{
     padding: 6.5px;
     border-radius: 6px;
     box-shadow: 0px 2px 15px 2px var(--primary-shadow);
+    background-color: var(--bg-color);
 }
 
 .bio h1{
@@ -148,6 +160,7 @@ nav ul li{
     border-radius: 11px;
     box-shadow: 0 3px 10px var(--secondary-shadow);
 }
+
 .project-pic{
     height: 100%;
     width: 100%;
@@ -155,36 +168,45 @@ nav ul li{
     box-shadow: 0 3px 10px var(--secondary-shadow);
     border-radius: 11px;
 }
+
 .projects{
     background-color: var(--bg-color);
     padding: 32px 0;
     height: 60%;
+    align-items: center;
 }
+
 .projects-container{
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
 .projects-title{
     text-align: center;
     margin-bottom: 10px;
-
 }
+
 .project-container{
+    align-items: center;
     text-align: center;
     padding: 10px;
     width: 350px;
 }
+
 .project-container p{
     padding: 4px;
 }
+
 .project-title{
     margin-bottom: var(--bottom-margin);
 }
+
 .project-details{
     margin-bottom: var(--bottom-margin);
 }
-.prject-card{
+
+.project-card{
     background-color: #FFF;
     border-radius: 11px;
     box-shadow: 0 3px 10px var(--primary-shadow);
@@ -193,10 +215,77 @@ nav ul li{
     overflow: hidden;
 }
 
-.image{
-    border:solid 2px red;
-    overflow: hidden;
-    height: 100px;
-    width: 100px;
-    align-items: center;
+.contact{
+    margin-top: 20px;
+}
+.contact h2{
+    text-align: center;
+    margin-bottom: var(--bottom-margin-2);
+}
+
+.contact-form-container{
+    max-width: 80%;
+    margin: 0 auto;
+    padding:10px ;
+    border-radius: 5px;
+    box-shadow: 0 3px 10px var(--secondary-shadow);
+}
+.contact-form-container label{
+    line-height: 27px;
+    font-weight: var(--bold-font);
+    color:var(--primary-color);
+}
+.contact-form-container textarea{
+    min-height: 62px;
+    font-size: 14px;
+}
+.contact-form-container .input-field{
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom:5px;
+    border-radius:5px;
+    border: none;
+    border: 2px outset var(--primary-color);
+    font-size: 18px;
+    outline: none;
+}
+
+.input-field::placeholder{
+    padding: 5px;
+    color: var(--primary-color);
+}
+.submit-btn{
+    width: 100%;
+    margin: 10px 0;
+    padding: 10px;
+    background-color: #FFF;
+    border: 2px solid var(--primary-color);
+    border-radius: 5px;
+    font-size: 18px;
+    font-weight: var(--bold-font);
+    transition: var(--transition);
+}
+.submit-btn::hover{
+    background-color: var(--primary-color);
+    border: 2px solid var(--primary-color);
+    cursor: pointer;
+}
+
+.socials{
+    display:flex ;
+    flex-direction: column;
+    position: fixed;
+    right: 1px;
+    bottom: 50px;
+}
+
+.socicon{
+    width: 40px;
+    height: 40px;
+}
+footer{
+    background-color: var(--bg-color);
+    padding: 12px;
+    text-align: center;
+    margin: 20px 0 0;
 }
